fix: add gap between type and name in widget panel tooltip

--- a/packages/dashboard-core-plugins/src/panels/WidgetPanelTooltip.scss
+++ b/packages/dashboard-core-plugins/src/panels/WidgetPanelTooltip.scss
@@ -8,6 +8,7 @@ $tooltip-container-width: 300px;
   align-items: first baseline;
   max-width: $tooltip-container-width;
   text-align: left;
+  column-gap: $spacer-3;
 
   .tab-tooltip-title {
     font-weight: 700;
